# voicevox_juce

./: .gitignore  CMakeLists.txt  README.md
voicevox_core/macos/: .gitignore
voicevox_core/macos/lib/: .gitignore
voicevox_juce/: voicevox_juce.cpp  voicevox_juce.h
voicevox_juce/voicevox_client/: voicevox_client.cpp  voicevox_client.h
voicevox_juce/voicevox_core_host/: voicevox_core_host.cpp  voicevox_core_host.h
